# Plasma

Sources/Plasma/FeatureLib/pfPython/: cyAvatar.cpp  cyAvatar.h  cyAvatarGlue.cpp  cyMisc.cpp  cyMisc.h  cyMiscGlue.cpp
Sources/Plasma/PubUtilLib/plAvatar/: plAvatarClothing.cpp  plAvatarClothing.h  plNPCSpawnMod.cpp  plNPCSpawnMod.h
Sources/Plasma/PubUtilLib/plNetClient/: plNetClientMgr.cpp  plNetClientMgr.h  plNetClientMgrLoad.cpp
Sources/Tools/: CMakeLists.txt
Sources/Tools/MaxComponent/: Pch.h  plAGComponents.cpp  plActivatorComponent.cpp  plAnimComponent.cpp  plAnimEventComponent.cpp  plAudioComponents.cpp  plAutoUIBase.cpp  plAutoUIBlock.cpp  plAutoUIComp.cpp  plAvatarComponent.cpp  plBehavioralComponents.cpp  plBlowComponent.cpp  plCAnimParamBlock.h  plCameraComponent.cpp  plCameraComponents.cpp  plClickDragComponent.cpp  plClusterComponent.cpp  plComponent.h  plComponent.rc  plComponentBase.h  plComponentReg.h  plFootPrintComponent.cpp  plGUIComponents.cpp  plInventoryObjComponent.cpp  plLODFadeComponent.cpp  plLightGrpComponent.cpp  plLineFollowComp.cpp  plMiscComponents.cpp  plMultistageBehComponent.cpp  plNPCSpawnComp.cpp  plObjectFlockerComponent.cpp  plOneShotComponent.cpp  plParticleComponents.cpp  plPhysConstraintComponents.cpp  plPhysicalComponents.cpp  plPythonFileComponent.cpp  plResponderAnim.cpp  plResponderComponent.cpp  plResponderLink.cpp  plResponderMtl.cpp  (+7 more)
Sources/Tools/MaxImport/: CMakeLists.txt  DllEntry.cpp  PlasmaImport.cpp  PlasmaImport.h  PlasmaImport.rc  veroverrides.h
Sources/Tools/MaxMain/: main.cpp
Sources/Tools/MaxPlasmaLights/: Pch.h  plRealTimeLightsPBDec.h
Sources/Tools/MaxPlasmaMtls/: Pch.h
Sources/Tools/MaxPlasmaMtls/Layers/: plAngleAttenLayer.cpp  plDynamicEnvLayerBitmapPB.cpp  plDynamicTextLayerBitmapPB.cpp  plLayerTexBitmapPB.cpp  plMAXCameraLayer.cpp  plStaticEnvLayerBitmapPB.cpp
Sources/Tools/MaxPlasmaMtls/Materials/: plAnimStealthNode.cpp  plBumpMtlAnimPBDec.h  plBumpMtlBasicPBDec.h  plClothingMtlPBDec.h  plCompositeMtlPBDec.h  plDecalMtlAdvPBDec.h  plDecalMtlLayersPBDec.h  plMultipassMtlPB.cpp  plPassMtlAnimPBDec.h  plPassMtlLayersPBDec.h
