include_directories("../")
include_directories("../../Plasma/CoreLib")
include_directories("../../Plasma/NucleusLib")
include_directories("../../Plasma/NucleusLib/inc")
include_directories("../../Plasma/PubUtilLib")
include_directories("../../Plasma/PubUtilLib/inc")
include_directories(${3dsm_INCLUDE_DIR})

set(MaxImport_HEADERS
    PlasmaImport.h
	PlasmaImport.def
	veroverrides.h
)

set(MaxImport_RESOURCES
    resource.h
    PlasmaImport.rc
)

set(MaxImport_SOURCES
    DllEntry.cpp
	PlasmaImport.cpp
)

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${Plasma_BINARY_DIR}/bin)
add_library(MaxImport SHARED ${MaxImport_HEADERS} ${MaxImport_RESOURCES} ${MaxImport_SOURCES})
set_target_properties(MaxImport PROPERTIES SUFFIX ".dli")


target_link_libraries(MaxImport MaxComponent)
target_link_libraries(MaxImport MaxPlasmaMtls)
target_link_libraries(MaxImport ${3dsm_LIBRARIES})

# Carbon copy from plClient
# TODO: Maybe see if some of these can be removed?
target_link_libraries(MaxImport CoreLib)
target_link_libraries(MaxImport pfAnimation)
target_link_libraries(MaxImport pfAudio)
target_link_libraries(MaxImport pfCamera)
target_link_libraries(MaxImport pfCCR)
target_link_libraries(MaxImport pfCharacter)
target_link_libraries(MaxImport pfConditional)
target_link_libraries(MaxImport pfConsole)
target_link_libraries(MaxImport pfGameGUIMgr)
target_link_libraries(MaxImport pfGameMgr)
target_link_libraries(MaxImport pfGameScoreMgr)
target_link_libraries(MaxImport pfJournalBook)
target_link_libraries(MaxImport pfLocalizationMgr)
target_link_libraries(MaxImport pfMessage)
target_link_libraries(MaxImport pfPython)
target_link_libraries(MaxImport pfSecurePreloader)
target_link_libraries(MaxImport pfSurface)
target_link_libraries(MaxImport plAgeDescription)
target_link_libraries(MaxImport plAgeLoader)
target_link_libraries(MaxImport plAudible)
target_link_libraries(MaxImport plAudio)
target_link_libraries(MaxImport plAudioCore)
target_link_libraries(MaxImport plAvatar)
target_link_libraries(MaxImport plCompression)
target_link_libraries(MaxImport plContainer)
target_link_libraries(MaxImport plDrawable)
target_link_libraries(MaxImport plFile)
target_link_libraries(MaxImport plGImage)
target_link_libraries(MaxImport plGLight)
target_link_libraries(MaxImport plInputCore)
target_link_libraries(MaxImport plInterp)
target_link_libraries(MaxImport plIntersect)
target_link_libraries(MaxImport plMath)
target_link_libraries(MaxImport plMessage)
target_link_libraries(MaxImport plModifier)
target_link_libraries(MaxImport plNetClient)
target_link_libraries(MaxImport plNetClientComm)
target_link_libraries(MaxImport plNetClientRecorder)
target_link_libraries(MaxImport plNetCommon)
target_link_libraries(MaxImport plNetGameLib)
target_link_libraries(MaxImport plNetMessage)
target_link_libraries(MaxImport plNetTransport)
target_link_libraries(MaxImport plParticleSystem)
target_link_libraries(MaxImport plPhysical)
target_link_libraries(MaxImport plPhysX)
target_link_libraries(MaxImport plPipeline)
target_link_libraries(MaxImport plProgressMgr)
target_link_libraries(MaxImport plResMgr)
target_link_libraries(MaxImport plScene)
target_link_libraries(MaxImport plSDL)
target_link_libraries(MaxImport plSockets)
target_link_libraries(MaxImport plStatGather)
target_link_libraries(MaxImport plStatusLog)
target_link_libraries(MaxImport plStreamLogger)
target_link_libraries(MaxImport plSurface)
target_link_libraries(MaxImport plTransform)
target_link_libraries(MaxImport plUnifiedTime)
target_link_libraries(MaxImport plVault)
target_link_libraries(MaxImport pnAsyncCore)
target_link_libraries(MaxImport pnAsyncCoreExe)
target_link_libraries(MaxImport pnDispatch)
target_link_libraries(MaxImport pnEncryption)
target_link_libraries(MaxImport pnFactory)
target_link_libraries(MaxImport pnGameMgr)
target_link_libraries(MaxImport pnInputCore)
target_link_libraries(MaxImport pnKeyedObject)
target_link_libraries(MaxImport pnMessage)
target_link_libraries(MaxImport pnModifier)
target_link_libraries(MaxImport pnNetBase)
target_link_libraries(MaxImport pnNetCli)
target_link_libraries(MaxImport pnNetCommon)
target_link_libraries(MaxImport pnNucleusInc)
target_link_libraries(MaxImport pnSceneObject)
target_link_libraries(MaxImport pnTimer)
target_link_libraries(MaxImport pnUtils)
target_link_libraries(MaxImport pnUUID)

if (WIN32)
    target_link_libraries(MaxImport Comctl32)
    target_link_libraries(MaxImport Rpcrt4)
    target_link_libraries(MaxImport Ws2_32)
endif(WIN32)

if(USE_VLD)
    target_link_libraries(MaxImport ${VLD_LIBRARY})
endif()

source_group("Header Files" FILES ${MaxImport_HEADERS})
source_group("Resource Files" FILES ${MaxImport_RESOURCES})
source_group("Source Files" FILES ${MaxImport_SOURCES})

